Fix flex width with truncated text

--- a/static/styles/homepage/blog-card.scss
+++ b/static/styles/homepage/blog-card.scss
@@ -21,7 +21,8 @@
 a.blog-card-wrapper{
     display: block;
     text-align: center;
-    width: 50ch;
+    flex: 1 1 0;
+    overflow: hidden;
     margin-bottom: 1rem;
     &:hover, :focus{
         text-decoration: none;
